--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link rel="icon" href="favicon.png">
+        <link rel="icon" href="img/favicon.png">
         <link rel="stylesheet" type="text/css" href="style.css">
         <meta charset="utf-8" />
         <title>s3engine</title>
@@ -11,12 +11,12 @@
         <canvas id="s3canvas"></canvas>
 
         <br><br>
-        <script src="gl-matrix-min.js"></script>
-        <script src="gl-helper.js"></script>
-        <script src="geometry.js"></script>
+        <script src="src/gl-matrix-min.js"></script>
+        <script src="src/gl-helper.js"></script>
+        <script src="src/geometry.js"></script>
 
-        <script src="player.js"></script>
+        <script src="src/player.js"></script>
 
-        <script src="script.js"></script>
+        <script src="src/script.js"></script>
     </body>
 </html>
