--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <br><br>
         <script src="src/gl-matrix-min.js"></script>
         <script src="src/gl-helper.js"></script>
-        <script src="src/geometry.js"></script>
+        <script src="src/cube.js"></script>
 
         <script src="src/player.js"></script>
 
