--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         <br><br>
         <script src="src/gl-matrix-min.js"></script>
         <script src="src/gl-helper.js"></script>
+
+        <script src="src/obj-parser.js"></script>
         <script src="src/cube.js"></script>
 
         <script src="src/player.js"></script>
