--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <script src="src/obj-parser.js"></script>
         <script src="src/cube.js"></script>
 
+        <script src="src/obj.js"></script>
         <script src="src/player.js"></script>
 
         <script src="src/script.js"></script>
