--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <script src="src/obj.js"></script>
         <script src="src/player.js"></script>
 
+        <script src="src/shaders.js"></script>
         <script src="src/script.js"></script>
     </body>
 </html>
