cleaned up shadows

--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
         <canvas id="s3canvas"></canvas>
 
         <br><br>
-        <script src="src/gl-matrix-min.js"></script>
-        <script src="src/gl-helper.js"></script>
-        <script src="src/obj-parser.js"></script>
+        <script src="lib/gl-matrix-min.js"></script>
+        <script src="lib/howler.core.js"></script>
+
+        <script src="lib/gl-helper.js"></script>
+        <script src="lib/obj-parser.js"></script>
 
         <script src="src/obj.js"></script>
         <script src="src/player.js"></script>
