--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
         <script src="lib/gl-helper.js"></script>
         <script src="lib/obj-parser.js"></script>
+        <script src="lib/chart-parser.js"></script>
 
         <script src="src/obj.js"></script>
         <script src="src/player.js"></script>
