scene start and beatbox rotation working

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <script src="src/obj.js"></script>
         <script src="src/player.js"></script>
 
+        <script src="src/scene.js"></script>
         <script src="src/conductor.js"></script>
 
         <script src="src/beatbox.js"></script>
