beatbox debug info

--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
                 </div>
                 <div id="debug-beatbox">
                     <h3>beatbox</h3>
-                    <div>rotation X: <span id='rotation-x'></span></div>
-                    <div>rotation Y: <span id='rotation-y'></span></div>
-                    <div>rotation Z: <span id='rotation-z'></span></div>
+                    <div>quat w: <span id='beatbox-quatw'></span></div>
+                    <div>quat i: <span id='beatbox-quati'></span></div>
+                    <div>quat j: <span id='beatbox-quatj'></span></div>
+                    <div>quat k: <span id='beatbox-quatk'></span></div>
                 </div>
             </div>
         </div>
