conductor in time

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
                     <div>t: <span id='t'></span></div>
                     <div>measure: <span id='measure'></span></div>
                     <div>beat: <span id='beat'></span></div>
+                    <div>playing: <input type="checkbox" id="debug-playing-checkbox"></div>
+                    <div>metronome: <input type="checkbox" id="debug-metronome-checkbox"></div>
                 </div>
                 <div id="debug-beatbox">
                     <h3>beatbox</h3>
