better conductor timing

--- a/index.html
+++ b/index.html
@@ -13,11 +13,14 @@
             <div id="debug-overlay">
                 <div id="debug-conductor">
                     <h3>conductor</h1>
-                    <div>t: <span id='t'></span></div>
-                    <div>measure: <span id='measure'></span></div>
-                    <div>beat: <span id='beat'></span></div>
+                    <div>t: <span id='debug-t'></span></div>
+                    <div>measure: <span id='debug-measure'></span></div>
+                    <div>beat: <span id='debug-beat'></span></div>
                     <div>playing: <input type="checkbox" id="debug-playing-checkbox"></div>
                     <div>metronome: <input type="checkbox" id="debug-metronome-checkbox"></div>
+                    <div>BPM: <span id='debug-bpm'></span></div>
+                    <div>beatspermeasure: <span id='debug-beatspermeasure'></span></div>
+                    <div>measuredivision: <span id='debug-measuredivision'></span></div>
                 </div>
                 <div id="debug-beatbox">
                     <h3>beatbox</h3>
