--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
         <div class="canvascontainer">
             <canvas id="s3canvas"></canvas>
             <div id="debug-overlay">
+                <div id="misc">
+                    <h3>misc</h3>
+                    <div>fps: <span id='debug-fps'></span></div>
+                </div>
                 <div id="debug-conductor">
                     <h3>conductor</h1>
                     <div>t: <span id='debug-t'></span></div>
