shader program class encapsulation

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         <script src="lib/gl-helper.js"></script>
         <script src="lib/obj-parser.js"></script>
         <script src="lib/chart-parser.js"></script>
+        <script src="lib/shaderProgram.js"></script>
 
         <script src="src/obj.js"></script>
         <script src="src/player.js"></script>
