--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
 
         <script src="src/beatbox.js"></script>
 
+        <script src="raytracer/ray.js"></script>
+        <script src="raytracer/viewport.js"></script>
+
         <script src="src/shaders.js"></script>
         <script src="src/script.js"></script>
     </body>
