--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 
         <script src="raytracer/ray.js"></script>
         <script src="raytracer/viewport.js"></script>
+        <script src="raytracer/sphere.js"></script>
 
         <script src="src/shaders.js"></script>
         <script src="src/script.js"></script>
